# learn-rust

./: Cargo.toml  README.md
src/: args.rs  main.rs  trash.rs
